NIFI-13187 - Modernize Archetypes